adjusted payment and scheduler